; ModuleID = '/home/carl/AnghaBench/php-src/main/extr_fopen_wrappers.c_php_fopen_and_set_opened_path.c'
source_filename = "/home/carl/AnghaBench/php-src/main/extr_fopen_wrappers.c_php_fopen_and_set_opened_path.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CWD_EXPAND = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i8*, i8*, i32**)* @php_fopen_and_set_opened_path to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @php_fopen_and_set_opened_path(i8* %0, i8* %1, i32** %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32**, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i8*, align 8
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32** %2, i32*** %7, align 8
  %10 = load i8*, i8** %5, align 8
  %11 = call i64 @php_check_open_basedir(i8* %10)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %14

13:                                               ; preds = %3
  store i32* null, i32** %4, align 8
  br label %40

14:                                               ; preds = %3
  %15 = load i8*, i8** %5, align 8
  %16 = load i8*, i8** %6, align 8
  %17 = call i32* @VCWD_FOPEN(i8* %15, i8* %16)
  store i32* %17, i32** %8, align 8
  %18 = load i32*, i32** %8, align 8
  %19 = icmp ne i32* %18, null
  br i1 %19, label %20, label %38

20:                                               ; preds = %14
  %21 = load i32**, i32*** %7, align 8
  %22 = icmp ne i32** %21, null
  br i1 %22, label %23, label %38

23:                                               ; preds = %20
  %24 = load i8*, i8** %5, align 8
  %25 = load i32, i32* @CWD_EXPAND, align 4
  %26 = call i8* @expand_filepath_with_mode(i8* %24, i32* null, i32* null, i32 0, i32 %25)
  store i8* %26, i8** %9, align 8
  %27 = load i8*, i8** %9, align 8
  %28 = icmp ne i8* %27, null
  br i1 %28, label %29, label %37

29:                                               ; preds = %23
  %30 = load i8*, i8** %9, align 8
  %31 = load i8*, i8** %9, align 8
  %32 = call i32 @strlen(i8* %31)
  %33 = call i32* @zend_string_init(i8* %30, i32 %32, i32 0)
  %34 = load i32**, i32*** %7, align 8
  store i32* %33, i32** %34, align 8
  %35 = load i8*, i8** %9, align 8
  %36 = call i32 @efree(i8* %35)
  br label %37

37:                                               ; preds = %29, %23
  br label %38

38:                                               ; preds = %37, %20, %14
  %39 = load i32*, i32** %8, align 8
  store i32* %39, i32** %4, align 8
  br label %40

40:                                               ; preds = %38, %13
  %41 = load i32*, i32** %4, align 8
  ret i32* %41
}

declare dso_local i64 @php_check_open_basedir(i8*) #1

declare dso_local i32* @VCWD_FOPEN(i8*, i8*) #1

declare dso_local i8* @expand_filepath_with_mode(i8*, i32*, i32*, i32, i32) #1

declare dso_local i32* @zend_string_init(i8*, i32, i32) #1

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @efree(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
